# skeg

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  NOTICE  OBSERVABILITY.md  README.md  docker-compose.example.yml
.githooks/: pre-push
.github/workflows/: build-artifacts.yml  ci.yml  docker-publish.yml  release.yml
assets/: render-coresidence-rss.py
assets/grafana/: otel-collector-config.yaml  prometheus.yml  skeg-overview.json
compat-tests/: redis_py_compat.py
crates/repo-audit/: Cargo.toml
crates/repo-audit/src/: lib.rs
crates/repo-audit/tests/: hygiene.rs
crates/skeg-core/: Cargo.toml
crates/skeg-core/benches/: append_cost.rs  cache_eviction_scaling.rs  cache_tenant_accounting.rs  keys_scaling.rs  recovery_scaling.rs  set_many_throughput.rs  sharded_commit.rs
crates/skeg-core/src/: cache.rs  group_commit.rs  index.rs  lib.rs  record.rs  segment.rs  shared_committer.rs  snapshot.rs  vlog.rs
crates/skeg-multi-tenant/: Cargo.toml  README.md
crates/skeg-multi-tenant/src/: error.rs  handle.rs  lib.rs  live.rs  root.rs
crates/skeg-multi-tenant/tests/: gates.rs  handle_robustness.rs  lifecycle_composition.rs  live_attach.rs  live_gates.rs  multi_tenant_basic.rs  quota.rs
crates/skeg-platform/: Cargo.toml
crates/skeg-platform/src/: affinity.rs  aligned.rs  durability.rs  file.rs  lib.rs  lock.rs
crates/skeg-proto/: Cargo.toml
crates/skeg-proto/src/: flags.rs  frame.rs  lib.rs  op.rs  request.rs  response.rs  vector.rs
crates/skeg-resp3/: Cargo.toml
crates/skeg-resp3/src/: command.rs  connection.rs  decoder.rs  encoder.rs  frame.rs  handlers.rs  lib.rs  parser.rs  version.rs
crates/skeg-server/: Cargo.toml
crates/skeg-server-tenant/: Cargo.toml
crates/skeg-server-tenant/src/: lib.rs  limits.rs  main.rs
crates/skeg-server/benches/: erase_real_embeddings.rs  erase_tenant_scaling.rs  tracing_overhead.rs
crates/skeg-server/src/: handler.rs  lib.rs  main.rs  payload.rs  quota.rs  resp3_handler.rs  shard.rs  tenant.rs  tenant_ctx.rs  tenant_ctx_stub.rs  tracing_otlp.rs
crates/skeg-server/tests/: filter_stress.rs  multi_tenant.rs  tiering_bulkhead.rs
crates/skeg-simd/: Cargo.toml
crates/skeg-simd/benches/: distances.rs
crates/skeg-simd/src/: block.rs  lib.rs
crates/skeg-telemetry/: Cargo.toml  README.md
crates/skeg-telemetry/benches/: overhead.rs
crates/skeg-telemetry/src/: dynamic.rs  histograms.rs  http.rs  lib.rs  metrics.rs  stats.rs
crates/skeg-tenant/: Cargo.toml
crates/skeg-tenant/src/: id.rs  lib.rs  namespace.rs  quota.rs  resolver.rs
crates/skeg-tenant/src/auth/: mod.rs  password.rs  store.rs  token.rs
crates/skeg-vector/: Cargo.toml
crates/skeg-vector/benches/: attr_zonemap.rs  build_profile.rs  cache_locality.rs  churn_gate.rs  churn_recall.rs  consolidate_timing.rs  degree_histogram.rs  disk_fvamana.rs  disk_hybrid.rs  filt_probe.rs  flat_block_pareto.rs  flat_block_throughput.rs  flat_index.rs  flat_throughput.rs  fvamana.rs  incremental_gate.rs  ivf_probe.rs  l_build_sweep.rs  mt_recall.rs  pq_gate.rs  range_e2e.rs  recall100_all.rs  recall100_compare.rs  recall_full.rs  scale_churn.rs  scale_glove.rs  scale_mxbai.rs  tier_mmap.rs  tiering_gate.rs  tq1_adaptive.rs  tq1_dim_matrix.rs  tq1_filtered_study.rs  tq1_hybrid_e2e.rs  tq1_ivf_recall.rs  tq1_lsweep.rs  tq1_mode_study.rs  tq1_pop_deep.rs  tq1_popcount_gate.rs  tq1_r100_sweep.rs  tq1_rerank_sweep.rs  (+13 more)
crates/skeg-vector/proptest-regressions/: flat.txt
crates/skeg-vector/src/: flat.rs  ivf_router.rs  lib.rs  quant.rs  source.rs  tq1_control.rs  turboquant.rs  vamana.rs  visited.rs
crates/skeg-vector/tests/: real_embed_filtered.rs
docs/: adr-admit-command-seam.md  adr-incremental-flush.md  adr-tenant-tiering-seam.md  architecture.md  devlog-0.5-incremental-insert.md  ecosystem.md  filtered-search.md  getting-started.md  incremental-insert-design.md  multi-tenancy.md  observability.md  roadmap.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_index_snapshot.rs  fuzz_proto_frame.rs  fuzz_vlog_record.rs
