[workspace]
members = [
    "crates/skeg-proto",
    "crates/skeg-core",
    "crates/skeg-simd",
    "crates/skeg-platform",
    "crates/skeg-vector",
    "crates/skeg-server",
    "crates/skeg-resp3",
    "crates/skeg-telemetry",
    "crates/skeg-tenant",
    "crates/skeg-server-tenant",
    "crates/skeg-multi-tenant",
    "crates/repo-audit",
]
# Fuzz targets live outside the workspace (own Cargo.toml). The
# `live-attach` feature of skeg-multi-tenant only resolves when the
# sibling skeg-rigging-net repo is available; build the crate without
# that feature in fresh checkouts.
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
# Per-crate versioning: each crate sets its own `version` and is bumped
# only when its code changes. The workspace no longer carries a shared
# `version` field; release.yml diffs each crate's tree against the
# previous tag and skips `cargo publish` when nothing changed.
edition = "2024"
# Edition 2024 stabilised in 1.85; a few 1.86 niceties in use.
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/skegdb/skeg"
homepage = "https://github.com/skegdb/skeg"
authors = ["skeg contributors"]
description = "RAM-frugal KV + vector store for Personal AI inference machines"
keywords = ["vector-database", "kv-store", "personal-ai", "vamana", "ann"]
categories = ["database", "data-structures"]

[workspace.lints.rust]
# Allow muting lints that exist in newer rustc but not in MSRV
# stable. Without this, CI rustc (older than the dev toolchain) errors
# on the `clippy::manual_is_multiple_of` allow below as `unknown lint`.
unknown_lints = "allow"

[workspace.lints.clippy]
# Two lints muted because their stable/unstable status flips across
# the MSRV (1.88) and the toolchain newer contributors use. Keeping
# them as warn-only would make CI green on one and red on the other.
uninlined_format_args = "allow"   # 1.88 deny vs 1.93 noise; cosmetic
manual_is_multiple_of = "allow"   # 1.93 asks for `.is_multiple_of()` which is unstable < 1.87

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Framing & bytes
bytes = "1"
bitflags = "2"

# Hashing & checksum
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32c = "0.6"

# Sync
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Strutture
smallvec = { version = "1", features = ["union"] }
fixedbitset = "0.5"
ahash = "0.8"

# Float ordering
ordered-float = "4"

# Compressione
lz4_flex = "0.11"

# Platform
libc = "0.2"
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }

# Allocator (Consolidation Hygiene): jemalloc returns freed pages to the OS
# on a decay timer, so streaming-insert consolidation churn does not stay
# pinned in RSS the way it does with the system allocator.
tikv-jemallocator = "0.6"

# Random
rand = "0.9"

# Error / log
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Test
proptest = "1"
tempfile = "3"

# Bench
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

# Loopback / cross-repo integration tests live in the skeg-testing
# repository (https://github.com/skegdb/skeg-testing). This workspace
# is fully self-contained.
