# Dev-only crate: repository hygiene checks that run under `cargo test`
# (and therefore the pre-push gate and CI). Not published.
[package]
name = "repo-audit"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
regex = "1"
