[package]
name = "skeg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "KV engine, vLog, indices, compaction, and cache for skeg"
readme = "../../README.md"
keywords = ["kv-store", "vlog", "lsm", "skeg", "database"]
categories = ["database", "data-structures"]

[dependencies]
skeg-proto = { path = "../skeg-proto", version = "0.1.2" }
skeg-platform = { path = "../skeg-platform", version = "0.1.2" }
skeg-telemetry = { path = "../skeg-telemetry", version = "0.1.2", default-features = false, features = ["stats"] }
bytes = { workspace = true }
xxhash-rust = { workspace = true }
crc32c = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
