[package]
name = "skeg-multi-tenant"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Multi-tenant orchestration layer on top of skeg-tenant: on-disk root, per-tenant handles, token-based open, quota enforcement."
readme = "../../README.md"
keywords = ["multi-tenant", "skeg"]
categories = ["database"]
# Not on crates.io for now: this crate is an orchestration layer for
# rigging consumers (hansa, custom orchestrators). Promote to
# `publish = true` once the consumer ecosystem stabilises.
publish = false

[lib]
path = "src/lib.rs"

[features]
# Live-attach mode (F.41): the LiveAttachRoot routes ops to a running
# skeg-server-tenant over RESP3 instead of opening tenants on-disk.
# Off by default; turning it on pulls in the network adapter crates
# and exposes `LiveAttachRoot` / `LiveAttachError` from the lib.
#
# skeg-rigging-net-resp3 is a path dep because that sub-crate is not
# yet on crates.io; once it lands the path override will drop.
live-attach = ["dep:skeg-rigging-net", "dep:skeg-rigging-net-resp3"]

[dependencies]
skeg-tenant = { path = "../skeg-tenant", version = "0.1" }
skeg-rigging = { path = "../../../skeg-rigging/crates/skeg-rigging", version = "0.1" }
skeg-rigging-skeg = { path = "../../../skeg-rigging/crates/skeg-rigging-skeg", version = "0.1" }
skeg-rigging-net = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net", version = "0.1", optional = true }
skeg-rigging-net-resp3 = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net-resp3", optional = true }

thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
bytes = { workspace = true }
# RESP3 mock server lives in the live-attach test (gated by the
# `live-attach` feature) and only loads when that feature is enabled.
skeg-resp3 = "0.1"
skeg-rigging-net = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net", version = "0.1" }

[lints]
workspace = true
