[package]
name = "skeg-multi-tenant"
# Concrete values, not `.workspace = true`: this crate is excluded
# from the engine workspace (see root Cargo.toml) because the
# `live-attach` feature pulls in path deps to a sibling repo that is
# not always on disk. version / edition / rust-version track the
# workspace; license matches the rest of the engine.
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
publish = false
authors = ["skeg contributors"]
repository = "https://github.com/skegdb/skeg"
homepage = "https://github.com/skegdb/skeg"
description = "Multi-tenant orchestration layer on top of skeg-tenant: on-disk root, per-tenant handles, token-based open, quota enforcement."
readme = "../../README.md"
keywords = ["multi-tenant", "skeg"]
categories = ["database"]

[lib]
path = "src/lib.rs"

[features]
# Live-attach mode (F.41): the LiveAttachRoot routes ops to a running
# skeg-server-tenant over RESP3 instead of opening tenants on-disk.
# Off by default; turning it on pulls in the network adapter crates
# and exposes `LiveAttachRoot` / `LiveAttachError` from the lib.
#
# skeg-rigging-net / skeg-rigging-net-resp3 are path deps because the
# resp3 sub-crate is not yet on crates.io; once it lands, the path
# overrides drop.
live-attach = ["dep:skeg-rigging-net", "dep:skeg-rigging-net-resp3"]

[dependencies]
skeg-tenant = { path = "../skeg-tenant", version = "0.1" }
skeg-rigging = { path = "../../../skeg-rigging/crates/skeg-rigging", version = "0.1" }
skeg-rigging-skeg = { path = "../../../skeg-rigging/crates/skeg-rigging-skeg", version = "0.1" }
skeg-rigging-net = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net", version = "0.1", optional = true }
skeg-rigging-net-resp3 = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net-resp3", optional = true }

thiserror = "2"

[dev-dependencies]
tempfile = "3"
bytes = "1"
skeg-resp3 = "0.1"
skeg-rigging-net = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net", version = "0.1" }

# Inlined from [workspace.lints] in the root (excluded crate cannot
# use `workspace = true`).
[lints.clippy]
uninlined_format_args = "allow"
manual_is_multiple_of = "allow"
