[package]
name = "skeg-multi-tenant"
# Concrete values, not `.workspace = true`: this crate sits inside the
# engine workspace but its `live-attach` feature still depends on
# sibling repos via path overrides during dev. The version / edition /
# rust-version match the rest of the engine; license is identical.
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["skeg contributors"]
repository = "https://github.com/skegdb/skeg"
homepage = "https://github.com/skegdb/skeg"
description = "Multi-tenant orchestration layer on top of skeg-tenant: on-disk root, per-tenant handles, token-based open, quota enforcement."
readme = "../../README.md"
keywords = ["multi-tenant", "skeg"]
categories = ["database"]

[lib]
path = "src/lib.rs"

[features]
# Live-attach mode (F.41): the LiveAttachRoot routes ops to a running
# skeg-server-tenant over RESP3 instead of opening tenants on-disk.
# Off by default; turning it on pulls in the network adapter crates
# and exposes `LiveAttachRoot` / `LiveAttachError` from the lib.
live-attach = ["dep:skeg-rigging-net", "dep:skeg-rigging-net-resp3"]

[dependencies]
skeg-tenant = { path = "../skeg-tenant", version = "0.1.3" }
# skeg-rigging and friends come from crates.io so a single resolved
# instance is shared with skeg-rigging-net-resp3's transitive view of
# it. Use `[patch.crates-io]` in a local workspace overlay if you need
# to iterate on these crates against an unreleased version.
skeg-rigging = "0.1.1"
skeg-rigging-skeg = "0.1.1"
skeg-rigging-net = { version = "0.1", optional = true }
skeg-rigging-net-resp3 = { version = "0.1", optional = true }

thiserror = "2"

[dev-dependencies]
tempfile = "3"
bytes = "1"
skeg-resp3 = "0.1"
skeg-rigging-net = "0.1"

[lints]
workspace = true
