[package]
name = "skeg-proto"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Wire protocol types and frame encoding for the skeg vector + KV store"
readme = "../../README.md"
keywords = ["vector-database", "skeg", "protocol", "binary-protocol"]
categories = ["database", "encoding"]

[dependencies]
bytes = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
