[package]
name = "skeg-server"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "TCP server for skeg: thread-per-core, binary protocol + RESP3"
readme = "../../README.md"
keywords = ["vector-database", "tcp", "server", "skeg", "resp3"]
categories = ["database", "network-programming"]

[lib]
name = "skeg_server"
path = "src/lib.rs"

[[bin]]
name = "skeg"
path = "src/main.rs"

[[bin]]
name = "skeg-resp3"
path = "src/bin/skeg-server-resp3.rs"

[dependencies]
skeg-proto = { path = "../skeg-proto", version = "0.1" }
skeg-core = { path = "../skeg-core", version = "0.1" }
skeg-platform = { path = "../skeg-platform", version = "0.1" }
skeg-vector = { path = "../skeg-vector", version = "0.1" }
skeg-resp3 = { path = "../skeg-resp3", version = "0.1" }
skeg-telemetry = { path = "../skeg-telemetry", version = "0.2" }
socket2 = "0.5"
tokio = { workspace = true }
bytes = { workspace = true }
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tikv-jemallocator = { workspace = true }
parking_lot = { workspace = true }

[features]
# Opt-in HTTP Prometheus exporter. Default off so the server binary
# stays slim; pull in with `--features metrics-http` on the build.
default = []
metrics-http = ["skeg-telemetry/http"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
