[package]
name = "skeg-server"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "TCP server for skeg: thread-per-core, binary protocol + RESP3"
readme = "../../README.md"
keywords = ["vector-database", "tcp", "server", "skeg", "resp3"]
categories = ["database", "network-programming"]

[lib]
name = "skeg_server"
path = "src/lib.rs"

[[bin]]
name = "skeg"
path = "src/main.rs"

[[bin]]
name = "skeg-resp3"
path = "src/bin/skeg-server-resp3.rs"

[dependencies]
skeg-proto = { path = "../skeg-proto", version = "0.1.3" }
skeg-core = { path = "../skeg-core", version = "0.3.2" }
skeg-platform = { path = "../skeg-platform", version = "0.1" }
skeg-vector = { path = "../skeg-vector", version = "0.1.6" }
skeg-resp3 = { path = "../skeg-resp3", version = "0.2.2" }
skeg-telemetry = { path = "../skeg-telemetry", version = "0.2" }
socket2 = "0.5"
tokio = { workspace = true }
bytes = { workspace = true }
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tikv-jemallocator = { workspace = true }
parking_lot = { workspace = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }

[features]
# HTTP Prometheus exporter is on by default so the released binary
# serves `/metrics` out of the box when `--metrics-port <PORT>` is
# passed. Drop it with `--no-default-features`; the `--metrics-port`
# flag stays parseable but logs a warning instead of binding.
default = ["metrics-http", "tracing-otlp"]
metrics-http = ["skeg-telemetry/http"]
# OpenTelemetry tracing exporter. When this feature is on AND the env
# var `SKEG_TRACE_OTLP_ENDPOINT` is set, spans flow to the configured
# OTLP/gRPC collector. When the feature is off, the OTel crates are
# not linked.
tracing-otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "tracing_overhead"
harness = false

[lints]
workspace = true
