[package]
name = "skeg-simd"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SIMD-accelerated distance kernels (NEON, scalar fallback) for skeg"
readme = "../../README.md"
keywords = ["simd", "neon", "vector", "distance", "skeg"]
categories = ["algorithms", "hardware-support"]

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "distances"
harness = false

[lints]
workspace = true
