[package]
name = "skeg-tenant"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Multi-tenant primitives for skeg (auth, tenant id, scoped keys, quota)"
readme = "../../README.md"
keywords = ["multi-tenant", "auth", "skeg"]
categories = ["database", "authentication"]

[lib]
path = "src/lib.rs"

[dependencies]
# Hashing: argon2id for passwords (RAM-tunable cost).
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
# HMAC-SHA256 for tokens (constant-time verify via subtle).
hmac = "0.12"
sha2 = "0.10"
# Constant-time byte compare for token validation.
subtle = "2.5"
# Random nonce/salt material.
rand = { workspace = true }

# Persistence + IO
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }

# Encoding for persistent records
crc32c = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
